<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editar_datos">

    <TextView
        android:id="@+id/txtConfirmacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="62dp"
        android:text="@string/confirmar"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/ejemplo_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmacion" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ejemplo_fecha"
        app:layout_constraintStart_toStartOf="@+id/txtNombre2"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre2" />

    <TextView
        android:id="@+id/txtTel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ejemplo_telefono"
        app:layout_constraintStart_toStartOf="@+id/txtFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <TextView
        android:id="@+id/txtEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="37dp"
        android:text="@string/ejemplo_mail"
        app:layout_constraintBottom_toTopOf="@+id/txtDescripcion2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtTel2"
        app:layout_constraintTop_toBottomOf="@+id/txtTel2" />

    <TextView
        android:id="@+id/txtDescripcion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ejemplo_desc"
        app:layout_constraintStart_toStartOf="@+id/txtEmail2"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail2" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="165dp"
        android:layout_height="52dp"
        android:layout_marginTop="99dp"
        android:layout_marginBottom="65dp"
        android:text="@string/btn_editarDatos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescripcion2"
        app:layout_constraintVertical_bias="0.728" />


</androidx.constraintlayout.widget.ConstraintLayout>